Add functionalities and Data migrations

--- a/AuthService/app.auth/appsettings.json
+++ b/AuthService/app.auth/appsettings.json
@@ -1,4 +1,15 @@
 {
+    "JwtSettings": {
+        "Secret": "ThisIsMyCustomSecreteKeyWithSuperSecretKey12345",
+        "Issuer": "AuthService",
+        "Audience": "AuthClient",
+        "AccessTokenExpirationMinutes": 30,
+        "RefreshTokenExpirationDays": 7
+    },
+    "ConnectionStrings": {
+        "LocalhostDbConnection": "Data Source=AuthService.db"
+    },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
